fixed contrast

--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@
 }
 
 body {
-    background-color: rgb(12, 16, 20);
+    background-color: black;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 1px, transparent 1px), linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 1px, transparent 1px);
-    background-size: 4em 4em;
+    background-size: 3em 3em;
     background-position: -2em -2em;
     z-index: -1;
 }
